Ensure update of scrollbar and caret visual rects on ancestor clip change

When an ancestor clip changes, we set kSubtreeVisualRectUpdate to update
descendant visual rects which may be affected by the clip change.
Previously we early returned in PaintInvalidator::InvalidatePaint() for
descendants that had only kSubtreeVisualRectUpdate flag set. This caused
other visual rects (of e.g. scrollbars, carets) that are updated during
LayoutObject::InvalidatePaint() not updated.

Now move the early return from PaintInvalidator::InvalidatePaint() into
ObjectPaintInvalidator::ComputePaintInvalidationReason() to ensure the
visual rects are updated.

Bug: 727155
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I28f92281363c693b16121f48d21ab4f808990f14